--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/muffins.html">Lasagna</a>
+    <ul>
+       <li> <a href="recipes/muffins.html">Pumpkin Muffins</a></li>
+       <li><a href="recipes/samosa.html">Samosa</a></li>
+       <li><a href="recipes/smoothie.html">Strawberry-Banana Smoothie</a></li>
+    </ul>
 </body>
 </html>
